[package]
edition = "2024"
name    = "m5stick_pd"
version = "0.1.0"

[[bin]]
name = "m5stick_pd"
path = "./src/bin/main.rs"

[dependencies]
defmt = "1.0.1"
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "=1.0.0-beta.1", features = [
  "defmt",
  "esp32",
  "unstable",
] }

critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-sync = "0.6.2"
embassy-embedded-hal = "0.3.0"
embassy-time = { version = "0.4.0", features = ["defmt"] }
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
esp-alloc = { version = "0.8.0", features = ["defmt"] }
esp-backtrace = { version = "0.16.0", features = [
  "defmt",
  "esp32",
  "exception-handler",
  "panic-handler",
] }
esp-hal-embassy = { version = "0.8.1", features = ["defmt", "esp32"] }
esp-println = { version = "0.14.0", features = ["defmt-espflash", "esp32"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
axp192-dd = { path = "../axp192-dd", features = ["defmt"] }
fusb302b = { path = "../fusb302b", features = ["defmt"] }
embedded-hal-async = "1.0.0"
embedded-hal = "1.0"
embedded-graphics = "0.8.1"
mipidsi = { path = "../display/mipidsi-fork" }
#mipidsi = { path = "../display/lcd-async" }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
